Refatorado cache, retirado do repository e aplicado no service,alterado tests cache, para unit, finalizado apirestful link shortner
